@startuml Backend_Walk
title Backend - Walking the AST

' abstract class ASTNode {
'   {abstract} + type: string
' }

class FunctionNode {
  + name: string
  + nodes: ASTNode[]
}

class Datapack {
  + functions: Map<string, FunctionNode>
  + files: Map<string, string>
}

abstract class CommandHandler {
  {abstract} + type: string
  {abstract} + generate(node: ASTNode, ctx: CodegenContext): void
}

class Dispatcher {
  - handlers: Map<type, CommandHandler>
  + dispatch(node: ASTNode, ctx: CodegenContext): void
}

class CodegenContext {
  + lines: string[]
  + datapack: Datapack
  + dispatcher: Dispatcher
  + emit(line: string): void
}

note right of FunctionNode
  Each node in nodes[]
  has a type string -
  the dispatcher uses this
  to find the right handler
end note

note right of Dispatcher
  for each node in fn.nodes[]:
    handler = handlers.get(node.type)
    handler.generate(node, ctx)
end note

note right of CodegenContext
  lines[] accumulates
  the emitted mcfunction strings.
  Stored in dp.files when done.
end note

' FunctionNode --|> ASTNode
' FunctionNode "1" o-- "many" ASTNode : nodes[]

Datapack o-- FunctionNode : functions map
Dispatcher --> FunctionNode : iterates nodes[]
Dispatcher --> CodegenContext : passes into generate()
Dispatcher o-- CommandHandler : handlers map
CommandHandler ..> CodegenContext : ctx.emit()
CodegenContext --> Datapack : dp.files.set()

@enduml